removed error-prone css to fix layout issue in mobile screen

--- a/styles/main.css
+++ b/styles/main.css
@@ -224,11 +224,6 @@ section.intro {
     width: 100%;
     padding: 0 30px;
     position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    -ms-transform: translateY(-50%) translateX(-50%);
-    -webkit-transform: translateY(-50%) translateX(-50%);
     text-align: center;
     z-index: 3;
     box-sizing: border-box; }
